fix logo loading on safari and chrome mobile

--- a/hackathon/css/main.css
+++ b/hackathon/css/main.css
@@ -103,6 +103,16 @@ img {
     text-align: center;
 }
 
+.intro-logo-img {
+
+    
+}
+
+.intro-logo-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 .img1 {
     bottom: 0;
     left: 0;
